--- a/about.html
+++ b/about.html
@@ -7,6 +7,21 @@
     <title>Petpals</title>
 </head>
 <body>
+    <div id="container">
+        <header id="aboutheader">
+            <a href="index.html"><h1>Petpals</h1></a>
+            <nav>
+                <a href="chat.html">Chat</a>
+                <a href="about.html">About</a>
+            </nav>
+        </header>
+        <main id="aboutmain">
+
+        </main>
+        <footer id="aboutfooter">
+            <p>&copy; 2023 PetPals. All rights reserved.</p>
+        </footer>
+    </div>
     
 </body>
 </html>
